アローとページャーの実装（途中）

--- a/git/index.html
+++ b/git/index.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width,user-scalable=yes,initial-scale=1, maximum-scale=1, minimum-scale=1">
 <meta name="format-detection" content="telephone=no,address=no,email=no">
 
-<title>構築課題_01</title>
+<title>構築課題</title>
 
 <link rel="apple-touch-icon-precomposed" sizes="57x57" href="assets/_meta/apple-touch-icon-57x57.png" />
 <link rel="apple-touch-icon-precomposed" sizes="60x60" href="assets/_meta/apple-touch-icon-60x60.png" />
@@ -30,30 +30,35 @@
 
 
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
-<script src="assets/js/TweenMax.js"></script>
 <script src="assets/js/head.js"></script>
-<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+<link rel="stylesheet" type="text/css" href="assets/css/style.css?20170203">
 
 </head>
 <body>
   <div class="wrapper">
-
-    <div id="slideshow" class="slideshow">
-      <img src="assets/img/img_01.jpg" alt="">
-      <img src="assets/img/img_02.jpg" alt="">
-      <img src="assets/img/img_03.jpg" alt="">
-      <img src="assets/img/img_04.jpg" alt="">
+    <div id="slideshow-block">
+      <div class="slideshow">
+        <img src="assets/img/img01.jpg" alt="">
+        <img src="assets/img/img02.jpg" alt="">
+        <img src="assets/img/img03.jpg" alt="">
+        <img src="assets/img/img04.jpg" alt="">
+        <img src="assets/img/img05.jpg" alt="">
+        <img src="assets/img/img06.jpg" alt="">
+        <img src="assets/img/img07.jpg" alt="">
+      </div>
+      <div class="slideshow-nav">
+        <a href="#" class="prev">prev</a>
+        <a href="#" class="next">next</a>
+      </div>
+      <div class="slideshow-indicator">
+      </div>
     </div>
-
   </div>
 
 
 
 
 
-
-
-
 <script src="assets/js/lib.js"></script>
-<script src="assets/js/app.js"></script>
+<script src="assets/js/app.js?20170203"></script>
 </body>
