アローとページャー（途中）

--- a/git/index.html
+++ b/git/index.html
@@ -47,8 +47,8 @@
         <img src="assets/img/img07.jpg" alt="">
       </div>
       <div class="slideshow-nav">
-        <a href="#" class="prev">prev</a>
-        <a href="#" class="next">next</a>
+        <div class="arrow prev"></div>
+        <div class="arrow next"></div>
       </div>
       <div class="slideshow-indicator">
       </div>
